# foris-controller-schnapps-module

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  README.rst  pyproject.toml  setup.py
foris_controller_backends/schnapps/: __init__.py
foris_controller_modules/schnapps/: __init__.py
foris_controller_modules/schnapps/handlers/: __init__.py  mock.py  openwrt.py
foris_controller_modules/schnapps/schema/: schnapps.json
foris_controller_schnapps_module/: __init__.py
tests/: conftest.py  test_schnapps.py
